--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20" >
         <tr>
             <td><img src="evgeny.jpg" alt="evgeny trilife picture"></td>
-            <td><h1>Shev82ru <a href="shev_contacts.html">внешняя ссылка значок</a> </h1>
+            <td><h1>Shev82ru <a href="shev_contacts.html">ContactMe</a> </h1>
     <p><em><strong> <a href="https://www.trilife.ru/profiles/18867/">Triathlon</a> </strong>, skiing, swim, bike lower)</em></p>
     <p><strong> I am love coffee, study web development and usuali training</strong></p></td>
         </tr>
